# NForge

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Contracts.md  Doxyfile  INTRO.md  NOTICE  README.md  cmakelists.txt
.github/: CODEOWNERS
.github/scripts/: benchmark-check.js
.github/workflows/: benchmarks.yml  ci.yml  cmake-single-platform.yml  docs.yml  format.yml  tests.yml
benchmarks/: CMakeLists.txt  bench_matmul.cpp  bench_operations.cpp  bench_physical_offset.cpp  bench_physics.cpp  bench_semantic.cpp
cmake/: ClangFormat.cmake  CompilerFlags.cmake
dev/bench/: data.js
docs/html/: annotated.html  annotated_dup.js  classCudaContext-members.html  classCudaContext.html  classTensor-members.html  classTensor.html  classTensor.js  classTensor_1_1CPUImpl-members.html  classTensor_1_1CPUImpl.html  classTensor_1_1CPUImpl.js  classTensor_1_1CUDAImpl-members.html  classTensor_1_1CUDAImpl.html  classTensor_1_1CUDAImpl.js  classTensor_1_1Impl-members.html  classTensor_1_1Impl.html  classTensor_1_1Impl.js  classTensor_1_1Shape-members.html  classTensor_1_1Shape.html  classTensor_1_1Shape.js  classTensor_1_1View-members.html  classTensor_1_1View.html  classTensor_1_1View.js  classes.html  classsemantic_1_1BinaryOpContext-members.html  classsemantic_1_1BinaryOpContext.html  classsemantic_1_1IndexContext-members.html  classsemantic_1_1IndexContext.html  classsemantic_1_1InplaceBinaryOpContext-members.html  classsemantic_1_1InplaceBinaryOpContext.html  classsemantic_1_1MatmulContext-members.html  classsemantic_1_1MatmulContext.html  classsemantic_1_1ReductionContext-members.html  classsemantic_1_1ReductionContext.html  classsemantic_1_1detail_1_1OperationContext-members.html  classsemantic_1_1detail_1_1OperationContext.html  cuda__context_8h_source.html  cuda__error_8h_source.html  cuda__utils_8h_source.html  dir_0d217bfdf429d86798f76ea4f6c4febe.html  dir_0d217bfdf429d86798f76ea4f6c4febe.js  (+121 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+11 more)
docs/latex/: annotated.tex  classCudaContext.tex  classTensor.tex  classTensor_1_1CPUImpl.eps  classTensor_1_1CPUImpl.tex  classTensor_1_1CUDAImpl.eps  classTensor_1_1CUDAImpl.tex  classTensor_1_1Impl.eps  classTensor_1_1Impl.tex  classTensor_1_1Shape.tex  classTensor_1_1View.tex  classsemantic_1_1BinaryOpContext.eps  classsemantic_1_1BinaryOpContext.tex  classsemantic_1_1IndexContext.eps  classsemantic_1_1IndexContext.tex  classsemantic_1_1InplaceBinaryOpContext.eps  classsemantic_1_1InplaceBinaryOpContext.tex  classsemantic_1_1MatmulContext.eps  classsemantic_1_1MatmulContext.tex  classsemantic_1_1ReductionContext.eps  classsemantic_1_1ReductionContext.tex  classsemantic_1_1detail_1_1OperationContext.eps  classsemantic_1_1detail_1_1OperationContext.tex  cuda__context_8h_source.tex  cuda__error_8h_source.tex  cuda__utils_8h_source.tex  files.tex  hierarchy.tex  index.tex  integration_2physics_2utils_8h_source.tex  matmul_8h_source.tex  md_Contracts.tex  md_README.tex  nforge_8h_source.tex  projectile__motion_8h_source.tex  refman.tex  semantic_8h_source.tex  sphere__slide_8h_source.tex  structProjectileMotionParams.tex  structProjectileMotionResults.tex  (+15 more)
include/nforge/: ErrorHandler.h  Tensor.h  TensorBackend.h  easylogging++.h  error_handler.h  nforge.h  pch.h  tensor.h  tensor_impl.h  tensor_impl_CPU.h  tensor_impl_CUDA.h  tensor_shape.h  tensor_view.h
include/nforge/backend/: tensor_impl.h
include/nforge/backend/cpu/: tensor_impl_CPU.h
include/nforge/backend/cuda/: tensor_impl_CUDA.h
include/nforge/core/: tensor.h  tensor_layout.h  tensor_shape.h  tensor_view.h
scenarios/physics/: projectile_motion.h  sphere_slide.h
src/: NForge.cpp  Tensor.cpp  TensorCPUBackend.cpp  TensorCUDABackend.cu  log.conf  tensor.cpp  tensor_impl_CPU.cpp  tensor_impl_CUDA.cu  tensor_shape.cpp  tensor_view.cpp
src/backend/: tensor_impl.h
src/backend/cpu/: tensor_impl_CPU.cpp  tensor_impl_CPU.h
src/backend/cuda/: tensor_impl_CUDA.cpp  tensor_impl_CUDA.cu  tensor_impl_CUDA.h
src/backend/cuda/kernels/: elementwise.cu  fill.cu  kernels.cu  kernels.cuh
src/backend/cuda/utils/: cuda_context.h  cuda_error.h  cuda_utils.h
src/core/: tensor.cpp  tensor_layout.cpp  tensor_shape.cpp  tensor_view.cpp
src/ops/matmul/: matmul.cpp  matmul.h
src/ops/semantic/: semantic.cpp  semantic.h
tests/: CMakeLists.txt  test_arithmetic.cpp  test_arithmetic_all_backends.cpp  test_semantic.cpp  test_tensor.cpp  test_tensor_cpu.cpp  test_tensor_cuda.cpp  test_utils.cpp  test_view.cpp  test_view_arithemtic.cpp  test_view_stride.cpp  utils.h
tests/integration/physics/: CMakeLists.txt  test_projectile_motion.cpp  test_sphere_slide.cpp  utils.h
tests/unit/: CMakeLists.txt  test_arithmetic.cpp  test_comparison.cpp  test_reductions.cpp  test_semantic.cpp  test_tensor.cpp  test_tensor_transfer.cpp  test_transfer.cpp  test_utils.cpp  test_view.cpp  test_view_arithemtic.cpp  test_view_stride.cpp  utils.h
